--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* "color": "#FF6550", */
+
 :root {
     --black-color: #071c21;
     /* --accent-color: #2d6e7e; */
@@ -179,6 +181,12 @@ body {
     margin-left: 0.25em;
 }
 
+.align-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: wrap;
+}
+
 .skill-icons {
     display: flex;
     justify-content: center;
@@ -208,10 +216,6 @@ body {
     color: #FF6550;
 }
 
-
-/* .card :hover {
-    border: 1px solid #FF6550;
-} */
 .card h5 :hover {
     border: none;
 }
@@ -223,6 +227,26 @@ body {
     /* margin-bottom: 40px; */
 }
 
+
+
+.project-card   {
+    transition: box-shadow 0.2s ease-in-out;
+    box-shadow: 0px 0.8px 1.8px rgba(0, 0, 0, 0.13908558841119492), 0px 0px 2.9px rgba(0, 0, 0, 0.1176878055787034);
+    background-color: whitesmoke;
+    width: 100%;
+    border: 1px solid #aabed1;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.project-card img {
+    width: 30rem;
+    border-radius: 10px;
+}
 
 .work-btn {
     color: #FF6550;
@@ -363,13 +387,14 @@ textarea {
     border-color: var(--accent-color);
 }
 
-footer {
+
+.footer {
     text-align: center;
     padding: 10px;
-}
-
-footer h3 span {
-    color: var(--dark-accent);
+    background-color: black;
+    font-size: 15px;
+    color: rgb(194, 188, 188);
+    margin-top: 5rem;
 }
 
 @media screen and (max-width: 1200px) {
@@ -384,6 +409,32 @@ footer h3 span {
           width: 50%;
     }
 }
+
+
+@media screen and (max-width: 992px) {
+    .project-card {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .project-card img {
+        width: 100%;
+        border: none;
+    }
+    .project-card p {
+        text-align: center;
+    }
+    .buttons {
+        display: flex;
+        justify-content: center;
+        
+    }
+
+    .buttons a {
+        margin-left: 1rem;
+    }
+}
+
 
 @media screen and (max-width: 768px) {
     .social-links {
@@ -439,3 +490,10 @@ footer h3 span {
           font-size: 1em;
     }
 }
+
+
+
+
+
+
+
