--- a/style.css
+++ b/style.css
@@ -490,9 +490,28 @@ textarea {
           font-size: 1em;
     }
 }
-
-
-
+.spend-sense-icon {
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+    margin: 20px;
+}
+.spend-sense-icon-con {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    /* height: 250px; */
+}
+.app-title {
+margin: 20px;
+font-size: 25px;
+text-align: center;
+}
+.policy-con {
+    padding: 2rem;
+}
 
 
 
